Project

General

Profile

Actions

Bug #48336

closed

monmaptool --create --add nodeA --clobber monmap aborts in entity_addr_t::set_port()

Added by Brad Hubbard over 3 years ago. Updated almost 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Category:
Correctness/Safety
Target version:
-
% Done:

0%

Source:
Q/A
Tags:
Backport:
pacific, octopus, nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

It's incorrect usage of the command since an IP address is required but we should not abort IMHO.

$ monmaptool --create --add nodeA --clobber monmap                                                                                                                             
monmaptool: monmap file monmap                                                                                                                                                                                                               
monmaptool: generated fsid cff848fa-b3b4-4f8b-a026-0ae94c694ee9                                                                                                                                                                              
/home/brad/working/src/ceph/src/msg/msg_types.h: In function 'void entity_addr_t::set_port(int)' thread 7fc74a2fcc00 time 2020-11-24T15:00:36.670929+1000                                                                                    
/home/brad/working/src/ceph/src/msg/msg_types.h: 364: ceph_abort_msg("abort() called")                                                                                                                                                       
 ceph version 16.0.0-7474-ge0240b9af46 (e0240b9af46ce20afaca15c10d81bae77b2c1fa3) pacific (dev)                                                                                                                                              
 1: (ceph::__ceph_abort(char const*, int, char const*, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const&)+0xf6) [0x7fc74c3cc9e0]                                                                        
 2: (entity_addr_t::set_port(int)+0xa6) [0x563af35ebff0]                                                                                                                                                                                     
 3: main()                                                                                                                                                                                                                                   
 4: __libc_start_main()                                                                                                                                                                                                                      
 5: _start()                                                                                                                                                                                                                                 
*** Caught signal (Aborted) **                                                                                                                                                                                                               
 in thread 7fc74a2fcc00 thread_name:monmaptool                                                                        
2020-11-24T15:00:36.671+1000 7fc74a2fcc00 -1 /home/brad/working/src/ceph/src/msg/msg_types.h: In function 'void entity_addr_t::set_port(int)' thread 7fc74a2fcc00 time 2020-11-24T15:00:36.670929+1000                                       
/home/brad/working/src/ceph/src/msg/msg_types.h: 364: ceph_abort_msg("abort() called")

Related issues 3 (0 open3 closed)

Copied to RADOS - Backport #50129: octopus: monmaptool --create --add nodeA --clobber monmap aborts in entity_addr_t::set_port()ResolvedNathan CutlerActions
Copied to RADOS - Backport #50130: nautilus: monmaptool --create --add nodeA --clobber monmap aborts in entity_addr_t::set_port()ResolvedNathan CutlerActions
Copied to RADOS - Backport #50131: pacific: monmaptool --create --add nodeA --clobber monmap aborts in entity_addr_t::set_port()Resolvedsinguliere _Actions
Actions #1

Updated by Brad Hubbard over 3 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 38258
Actions #2

Updated by Brad Hubbard about 3 years ago

  • Status changed from Fix Under Review to In Progress
Actions #3

Updated by Kefu Chai about 3 years ago

  • Status changed from In Progress to Pending Backport
Actions #4

Updated by Backport Bot about 3 years ago

  • Copied to Backport #50129: octopus: monmaptool --create --add nodeA --clobber monmap aborts in entity_addr_t::set_port() added
Actions #5

Updated by Backport Bot about 3 years ago

  • Copied to Backport #50130: nautilus: monmaptool --create --add nodeA --clobber monmap aborts in entity_addr_t::set_port() added
Actions #6

Updated by Brad Hubbard about 3 years ago

  • Backport changed from octopus, nautilus to pacific, octopus, nautilus
Actions #7

Updated by Backport Bot about 3 years ago

  • Copied to Backport #50131: pacific: monmaptool --create --add nodeA --clobber monmap aborts in entity_addr_t::set_port() added
Actions #8

Updated by Loïc Dachary almost 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF