monmaptool: Don't call set_port on an invalid address

Verify we parse the entire address argument.

Fixes: https://tracker.ceph.com/issues/48336

Signed-off-by: Brad Hubbard <bhubbard@redhat.com>
Signed-off-by: Kefu Chai <kchai@redhat.com>
(cherry picked from commit c0aa1fdbe7b87c2fb4b572169372ec487950b03d)